# boojum

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src/: CMakeLists.txt  libboojum.cpp  libboojum.h  node-proof.hpp  node-proof.tcc  serialize.hpp  serialize.tcc  snark-aggregation.cpp  snark-aggregation.h  test-aggregation.cpp  test_curve_initialization.cpp  tools.hpp  tools.tcc  tree.hpp  tree.tcc
src/circuits/: aggregator_circuit.hpp  aggregator_circuit.tcc
src/circuits/test/: test-aggregator-circuit.cpp
src/cycles/: aggregation.hpp  aggregation.tcc  aggregation_system.hpp  basic_aggregation_system.tcc  cycles.hpp
src/materials/: file.hpp  trees.hpp
src/trees/: node.hpp  node.tcc  tree.hpp  tree.tcc
